--- a/src/index.css
+++ b/src/index.css
@@ -334,3 +334,9 @@ h3 {
   .dateSteps::first-letter {
     text-transform: uppercase;
   }
+
+  .flex11 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+  }
